changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Remove obsolete 'color_fg' handling.
 common/image.c
Nicolas Weeger 2008-11-10

Merge smoothing information in New_Face, to simplify some.
 common/image.c
 include/face.h
Nicolas Weeger 2008-11-09

Apply patch #2040854: Patch to compile on OSX PPC, and to comply with ANSI C, by elliotbay.
Basically put an array definition in the .c instead of the .h.
 plugins/cfpython/include/cfpython.h
 plugins/cfpython/cfpython.c
Nicolas Weeger 2008-11-09

Fix for bug #2249875: 2.0 random say crashes.
Remove 'duplicate_dialog_information()', and merely clear FLAG_DIALOG_PARSED in
object copy so dialog is correctly parsed again when needed.
 common/dialog.c object.c
 include/libproto.h
Nicolas Weeger 2008-11-09

Initial import of Crossfire Resource Editor, tool to manage various resources like
artifacts, archetypes, faces, animations, treasures.
For now it only lets the user view, but edition is planned.
This is a C++/Qt program, not part of the regular build system.
 utils/cre/*cpp *h: CRE files.
Nicolas Weeger 2008-11-08

Rename map's 'template' field which conflicts with C++ compilers.
Also change 'region' and 'shopitems' in some structures to the underlying structure
instead of the typedef, for the same confusion reason.
 common/anim.c map.c
 include/map.h
 random_maps/random_map.h
 server/server.c swap.c
Nicolas Weeger 2008-11-08

Tentative fix for bug #2018391: Zero-cap or capless containers, also stacking containers.
Split containers when reading/applying them (coherent with eg rings when applied).
Also ensure that a sack is split when putting things into it anyway.